feat: new api group(/sharing) for download public/private file
