# docs/swagger.json
@@ -12,14 +12,14 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/storage/download/{file_id}": {
+        "/share/download/{file_id}": {
             "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Download media file",
+                "description": "Download media file (images, videos, etc.)",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,9 +27,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Storage"
+                    "Share"
                 ],
-                "summary": "Download media",
+                "summary": "Download media (public/private)",
                 "parameters": [
                     {
                         "type": "string",
@@ -44,6 +44,113 @@
                         "name": "token",
                         "in": "query",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/medioa_internal_storage_models.DownloadResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/storage/download/request/{file_id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get download url for private media with download password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Storage"
+                ],
+                "summary": "Request download private media",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "file id",
+                        "name": "file_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "secret",
+                        "name": "secret",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/medioa_internal_storage_models.RequestDownloadResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/storage/download/{file_id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Download media file (images, videos, etc.)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Storage"
+                ],
+                "summary": "Download media (public/private)",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "file id",
+                        "name": "file_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "token",
+                        "name": "token",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "secret",
+                        "name": "secret",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "password",
+                        "name": "password",
+                        "in": "query"
                     },
                     {
                         "type": "boolean",
@@ -96,63 +203,6 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/medioa_internal_storage_models.CreateSecretResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/storage/secret/download/{file_id}": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Download media file",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Storage"
-                ],
-                "summary": "Download media with secret",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "file id",
-                        "name": "file_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "secret",
-                        "name": "secret",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "silent response",
-                        "name": "silent",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/medioa_internal_storage_models.DownloadResponse"
                         }
                     }
                 }
@@ -284,6 +334,58 @@
                         "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/medioa_internal_storage_models.UploadResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/storage/secret/upload/commit": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Commit all chunks to complete upload media file",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Storage"
+                ],
+                "summary": "Commit upload media chunk with secret",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "session id",
+                        "name": "id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "secret",
+                        "name": "secret",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "description": "commit chunk request",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/medioa_internal_storage_models.CommitChunkRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/medioa_internal_storage_models.CommitChunkResponse"
                         }
                     }
                 }
@@ -431,20 +533,13 @@
                 "tags": [
                     "Storage"
                 ],
-                "summary": "Commit upload media chunk with secret",
+                "summary": "Commit upload media chunk",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "session id",
                         "name": "id",
                         "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "secret",
-                        "name": "secret",
-                        "in": "query",
-                        "required": true
                     },
                     {
                         "description": "commit chunk request",
@@ -599,6 +694,20 @@
         "medioa_internal_storage_models.DownloadResponse": {
             "type": "object",
             "properties": {
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "medioa_internal_storage_models.RequestDownloadResponse": {
+            "type": "object",
+            "properties": {
+                "file_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
                 "url": {
                     "type": "string"
                 }
